fixed the menu title spacing and font size

--- a/app/assets/stylesheets/components/_accordion.scss
+++ b/app/assets/stylesheets/components/_accordion.scss
@@ -1,11 +1,12 @@
 .accordion-button {
 padding: 35px;
-font-size: 1.1rem;
+font-size: 20px;
 margin-bottom: 7px;
 box-shadow: lightgray 2px 2px 4px;
 justify-content: center;
 font-weight: 700;
 color: $white;
+letter-spacing: 2px;
 }
 
 .accordion-item {
@@ -18,4 +19,14 @@ color: $white;
 
 .accordion-button::after {
   display: none;
+}
+
+.next-button {
+  .btn {
+    font-weight: 700;
+    font-size: 18px;
+    color: $white;
+    letter-spacing: 2px;
+    font-family: 'Libre Baskerville';
+}
 }
