--- a/app/assets/stylesheets/components/_item_card.scss
+++ b/app/assets/stylesheets/components/_item_card.scss
@@ -48,9 +48,10 @@
   margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
+  padding: 30px;
   .h3 {
-    font-weight: 700;
-    font-size: $headers-3-font
+    font-weight: 800;
+    font-size: 45px;
   }
 }
 
