--- a/app/assets/stylesheets/components/_order_item_card.scss
+++ b/app/assets/stylesheets/components/_order_item_card.scss
@@ -44,10 +44,6 @@
   }
 }
 
-.pages-title {
-  h3 {
-    padding: 30px;}
-}
 
 .menu-next-button {
   &hover,
